--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
-  branch: main
+  name: auth0
+  domain: "pbd.eu.auth0.com"
+  client_id: "JDs2q1JDBhGpfFgSZ1JPup2AFn481oKe"
+  branch: "main"
 
 media_folder: "public/uploads"
 public_folder: "/uploads"
