--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,4 +1,3 @@
-# Use DecapBridge PKCE auth (required)
 backend:
   name: git-gateway
   repo: timdreesen/arztpraxis
@@ -9,59 +8,50 @@ backend:
   auth_token_endpoint: /sites/940cdcb2-d106-4fbd-b0e6-552f662fe744/token
   gateway_url: https://gateway.decapbridge.com
 
-  # See who did what (optional)
-  commit_messages:
-    create: Create {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    update: Update {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    delete: Delete {{collection}} “{{slug}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    uploadMedia: Upload “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    deleteMedia: Delete “{{path}}” - {{author-name}} <{{author-login}}> via DecapBridge
-    openAuthoring: Message {{message}} - {{author-name}} <{{author-login}}> via DecapBridge
+commit_messages:
+  create: 'Create {{collection}} "{{slug}}" - {{author-name}} <{{author-login}}> via DecapBridge'
+  update: 'Update {{collection}} "{{slug}}" - {{author-name}} <{{author-login}}> via DecapBridge'
+  delete: 'Delete {{collection}} "{{slug}}" - {{author-name}} <{{author-login}}> via DecapBridge'
+  uploadMedia: 'Upload "{{path}}" - {{author-name}} <{{author-login}}> via DecapBridge'
+  deleteMedia: 'Delete "{{path}}" - {{author-name}} <{{author-login}}> via DecapBridge'
+  openAuthoring: "Message {{message}} - {{author-name}} <{{author-login}}> via DecapBridge"
 
-# Enable PKCE fields (optional, recommended)
 auth:
   email_claim: email
   first_name_claim: first_name
   last_name_claim: last_name
   avatar_url_claim: avatar_url
 
-# Better Decap + Bridge logo (optional)
+site_url: https://snazzy-phoenix-ae7b50.netlify.app
 logo_url: https://decapbridge.com/decapcms-with-bridge.svg
 
-# Add site links in Decap CMS (optional)
-site_url: https://snazzy-phoenix-ae7b50.netlify.app
-
-media_folder: "public/uploads"
-public_folder: "/uploads"
+media_folder: public/uploads
+public_folder: /uploads
 
 collections:
-  - name: "outofoffice"
-    label: "Out of Office Notices"
-    folder: "content/outofoffice"
-    extension: "json"
-    format: "json"
+  - name: outofoffice
+    label: Out of Office Notices
+    folder: content/outofoffice
+    extension: json
+    format: json
     create: true
-    slug: "notice-{{year}}-{{month}}-{{day}}"
+    slug: notice-{{year}}-{{month}}-{{day}}
     fields:
-      - label: "Start Date"
-        name: "start_date"
-        widget: "datetime"
-        date_format: "YYYY-MM-DD"
-      - label: "End Date"
-        name: "end_date"
-        widget: "datetime"
-        date_format: "YYYY-MM-DD"
-      - label: "Available Doctors"
-        name: "available_doctors"
-        widget: "list"
-        field:
-          label: "Doctor"
-          name: "doctor"
-          widget: "string"
-      - label: "Custom Message"
-        name: "message"
-        widget: "text"
-      - label: "Published"
-        name: "published"
-        widget: "boolean"
-        default: true
+      - {
+          label: Start Date,
+          name: start_date,
+          widget: datetime,
+          date_format: YYYY-MM-DD,
+        }
+      - {
+          label: End Date,
+          name: end_date,
+          widget: datetime,
+          date_format: YYYY-MM-DD,
+        }
+      - label: Available Doctors
+        name: available_doctors
+        widget: list
+        field: { label: Doctor, name: doctor, widget: string }
+      - { label: Custom Message, name: message, widget: text }
+      - { label: Published, name: published, widget: boolean, default: true }
