--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "decap-server": "^3.3.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
