--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "decap-cms-app": "^3.9.0",
     "lucide-react": "^0.546.0",
     "luxon": "^3.7.2",
-    "next": "15.5.6",
+    "next": "^15.5.7",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
